main navigation folder setted

--- a/freelancer/appsettings.Development.json
+++ b/freelancer/appsettings.Development.json
@@ -19,6 +19,12 @@
   },
   "Umbraco": {
     "CMS": {
+      "Unattended": {
+        "InstallUnattended": true,
+        "UnattendedUserName": "Harun Ozaslan",
+        "UnattendedUserEmail": "harunzsln0@gmail.com",
+        "UnattendedUserPassword": "9876543210"
+      },
       "Content": {
         "MacroErrors": "Throw"
       },
